--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -16,7 +16,7 @@ body {
 .outputTag {
     display: inline-block;
     text-align: center;
-    color: #000;
+    color: #fff;
     background-color: #666;
     border-radius: 10px;
     font-size: 10px;
